%% Pre-defined commands: \R, \code, \acronym, \url, \file, \pkg
%% Since R 3.2.0, there are some additional system Rd macros available,
%% e.g., \CRANpkg and \doi. See the definitions in the file
%% file.path(R.home("share"), "Rd", "macros", "system.Rd")

\name{NEWS}
\title{News for Package 'biostatUZH'}

\section{Changes in biostatUZH version 1.5.2 (2015-09-09)}{
  \itemize{
    \item Fixed yet another \code{conf.level} bug
    (sitting in \code{WeibullReg()} since version 1.1.0).
  }
}

\section{Changes in biostatUZH version 1.5.1 (2015-05-06)}{
  \itemize{
    \item \code{jeffrey()} and thus \code{confIntProportion()} now also
    work in the boundary cases \code{x = 0} and \code{x = n}.
  }
}

\section{Changes in biostatUZH version 1.5.0 (2015-02-12)}{
  \itemize{
    \item New function \code{formatCI()}, a re-implementation of
    \code{displayCI()} from package \pkg{reporttools}.
    \item New function \code{plotcorr()}, a fork from package
    \pkg{ellipse}, which enables ellipses in the lower and numbers in
    the upper triangle (or vice versa).
    \item Bugfix in \code{confIntAUC()}: the argument \code{conf.level}
    was ignored when calculating Wilson confidence intervals for
    specificity, sensitivity, PPV, and NPV.
    \item \code{tableRegression()} ...
    \itemize{
      \item supports negative binomial models fit by \code{glm.nb} from
      package \pkg{MASS}.
      \item passes additional arguments to \code{print.xtable} and
      sanitizes row names by default.
    }
    \item Migrated package development to the R-Forge project \dQuote{ebuzh}.
    \item Accommodated R CMD check issues.
    \item Updated institute name.
    \item Standardized \file{NEWS} file format.
    \item The \pkg{boot} and \pkg{reporttools} packages are no longer
    automatically attached when attaching package \pkg{biostatUZH}. 
  }
}

\section{Changes in biostatUZH version 1.4.9 (2014-04-15)}{
  \itemize{